# piyolog_parser

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_daily.txt
.github/workflows/: pytest.yml
piyolog_parser/: parser.py
piyolog_parser/core/: events.json  parse_base.py  parse_daily.py  parse_event.py  parse_monthly.py  parser.py
tests/: test_parser.py
tests/data/invalid/daily/: contain_other_strings.txt  empty_header.txt  empty_name.txt  invalid_date.txt  invalid_date_format.txt  invalid_drink_unit1.txt  invalid_drink_unit2.txt  invalid_format.txt  invalid_header1.txt  invalid_header2.txt  invalid_sleep_time.txt  invalid_time.txt  missing_event_name.txt  missing_name.txt  missing_time.txt  negative_values.txt  unexpected_symbols.txt
tests/data/invalid/monthly/: empty_header.txt  invalid_name.txt  invalid_separator1.txt  invalid_separator2.txt  invalid_separator3.txt  notequal_month.txt
tests/data/valid/daily/: valid_daily.txt
tests/data/valid/monthly/: valid_monthly.txt
