[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "piyolog_parser"
version = "0.1.0"
description = "A parser for Piyolog baby activity logs"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "piyolog_parser"}]

# 依存関係
[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.2.3"

# 開発用ツール
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

# # スクリプト（オプション）
# [tool.poetry.scripts]
# piyolog-parser = "piyolog_parser.parser:main"

